--- a/css/default.css
+++ b/css/default.css
@@ -3,7 +3,7 @@
     --main-bg: #0A1E39;
     --accent-green: #49FFCD;
     --grey: #939EBF;
-    --off-white: #E6F1FF;
+    --off-white: #ccd6f6;
 }
 
 
@@ -17,6 +17,14 @@ body {
     font-family: Roboto, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+article {
+    margin: 10em 5.5em;
+}
+
+section {
+    margin: 10em 5.5em;
+}
+
 h1 {
     color: var(--off-white);
     font-size: 3.5rem;
@@ -26,9 +34,11 @@ h1 {
 h2 {
     color: var(--off-white);
     font-size: 2rem;
-    font-weight: bold;
+    font-weight: 600;
 }
-
+.section-title {
+    margin-bottom: 0;
+}
 h3 {
     color: var(--off-white);
     font-size: 1.3rem;
@@ -42,6 +52,7 @@ p {
 }
 
 hr {
+    margin-top: 0;
     border-color: var(--accent-green);
 }
 
@@ -54,9 +65,13 @@ header {
 }
 
 .accent-text {
-    font-family: 'Courier New', Courier, monospace;
+    font-family: "SF Mono","Fira Code","Fira Mono","Roboto Mono", monospace;
+    /* font-family: 'Courier New', Courier, monospace; */
     color: var(--accent-green);
+    font-weight: 300;
 }
+
+
 
 
 /* NAVIGATION DESKTOP */
@@ -68,7 +83,7 @@ header {
 
 #socials i {
     color: var(--off-white);
-    font-size: 2.5rem;
+    font-size: 2rem;
     margin: 0 0.5rem;
 }
 #socials i:hover {
@@ -97,7 +112,8 @@ nav ul {
     padding: 5px 0;
     display: inline;
     list-style: none;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: "SF Mono","Fira Code","Fira Mono","Roboto Mono",monospace;
+
 }
 nav ul li {
     display: inline;
@@ -110,4 +126,60 @@ nav a, nav a:visited {
 
 nav a:hover {
     color: var(--accent-green);
+}
+
+/* END NAV */
+
+
+/* Introduction */
+.introduction {
+    margin: 4em 4em 10em 4em;
+}
+
+.introduction h1 {
+    margin: 0.5rem 0;
+}
+
+.heading {
+    margin: 2em 0;
+}
+
+.whoiam {
+    color: var(--grey);
+}
+
+/* CTA */
+.cta {
+    width: fit-content;
+    margin-left: 5.5em;
+}
+.cta a {
+    color: var(--accent-green);
+    text-decoration: none;
+    border: 0.1rem solid var(--accent-green);
+    border-radius: 25px;
+    padding: 0.6em 2.5em;
+}
+
+#about-content-container {
+    display: flex;
+    flex-direction: row;
+    column-gap: 5em;
+}
+
+#technologies i{
+    font-size: 5rem;
+}
+.tech-item-container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    column-gap: 1em;
+    row-gap: 1em;
+    text-align: center;
+    justify-content: space-between;
+}
+
+.tech-item {
+    width: 5em;
 }
