--- a/css/default.css
+++ b/css/default.css
@@ -43,6 +43,7 @@ h3 {
     color: var(--off-white);
     font-size: 1.3rem;
     font-weight: bold;
+    margin: 0;
 }
 
 p {
@@ -161,6 +162,10 @@ nav a:hover {
     padding: 0.6em 2.5em;
 }
 
+.cta a:hover {
+    box-shadow: 0px 0px 8px var(--accent-green);
+}
+
 #about-content-container {
     display: flex;
     flex-direction: row;
@@ -177,9 +182,53 @@ nav a:hover {
     column-gap: 1em;
     row-gap: 1em;
     text-align: center;
-    justify-content: space-between;
+    justify-content: left;
 }
 
 .tech-item {
     width: 5em;
+}
+
+
+/* projects */
+
+.project-container {
+    display: grid;
+    grid-template-columns: repeat(10, 10% [col-start]);
+    grid-template-rows: repeat(8, 4em [row-start]);
+}
+
+.project-container .content-container {
+    background-color: var(--main-bg);
+    border: 0.1rem solid var(--accent-green);
+    border-radius: 5px;
+    min-width: 20em;
+    padding: 1em 1em;
+    box-shadow: 5px 5px 5px var(--darker);
+    grid-column: 1 / 6;
+    grid-row: 3 / 6;
+    z-index: 2;
+    position: relative;
+}
+.content-container p {
+    margin: 1em 0.5em;
+}
+.visit-project-btn {
+    background-color: var(--main-bg);
+    color: var(--accent-green);
+    text-decoration: none;
+    border: 0.1rem solid var(--accent-green);
+    border-radius: 25px;
+    padding: 0.6em 2.5em;
+    position: absolute;
+    bottom: -1.2em;
+}
+
+.project-container img {
+    width: 100%;
+}
+.project-container .img-container {
+    grid-column: 4 / 11;
+    grid-row: 2 / 7;
+    z-index: 1;
 }
