--- a/css/default.css
+++ b/css/default.css
@@ -84,7 +84,7 @@ a:visited {
 #socials {
     display: inline;
     position: absolute;
-    right: 1.5em;
+    right: 3.5em;
 }
 
 #socials i {
@@ -103,17 +103,19 @@ a:visited {
     font-size: 1.5rem;
 }
 nav {
-    margin: 0 1.5em 5em 1.5em;
+    width: 100%;
+    padding: 0 1.5em;
     display: flex;
     align-items: center;
-    /* padding-left: 1.5em; */
     height: 6em;
     background-color: #0A1E3990;
-    position: sticky;
+    position: fixed;
     opacity: 9;
     top: 0;
+    left: 0;
     z-index: 3;
-    backdrop-filter: blur(0.4rem);
+    backdrop-filter: blur(0.5rem);
+    transition: top 300ms ease-out;
 }
 nav i {
     color: var(--accent-green);
@@ -140,12 +142,19 @@ nav a:hover {
     color: var(--accent-green);
 }
 
+.nav-scrolled {
+    box-shadow: 0px 0.2rem 0.2rem var(--darker);
+}
+.nav-hidden {
+    top: -6.5em;
+}
+
 /* END NAV */
 
 
 /* Introduction */
 .introduction {
-    margin: 4em 4em 10em 4em;
+    margin: 10em 4em 10em 4em;
 }
 
 .introduction h1 {
