--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -1,17 +1,32 @@
 /* Technologies media query */
-@media (max-width: 850px) {
+@media (max-width: 53em) {
     #about-content-container {
         flex-direction: column;
     }
 }
 
 /* Projects media query */
-@media (max-width: 45em) {
-    
+@media (max-width: 50em) {
+    .project-container {
+        display: flex;
+        flex-direction: column;
+    }
+    .project-container .content-container {
+        min-width: unset;
+    }
+    /* .img-container {
+        transform: rotate(8deg);
+    }
+    .project-container:nth-child(even) .img-container {
+        transform: rotate(-8deg);
+    } */
 }
 
 /* Nav media query */
 @media (max-width: 38em) {
+    h1 {
+        font-size: 2.5rem;
+    }
     .mobile-nav-btn {
         display: block;
         font-size: 1.8rem;
@@ -58,5 +73,29 @@
     .nav-mobile-hide {
         top: -17.2em;
     }
-
+    article, header, section, .introduction{
+        margin: 10em 1em;
+    }
+    .cta {
+        margin-left: 1.5em;
+    }
+    .tech-item-container{
+        justify-items: center;
+        column-gap: 0;
+    }
+    #technologies i {
+        font-size: 4rem;
+    }
+    .special {
+        padding-top: 0;
+    }
+    .special p {
+        margin-top: 0.3rem;
+    }
+    .tech-item p {
+        font-size: 0.8rem;
+    }
+    .tech-item img {
+        transform: scale(0.8);
+    }
 }
