--- a/css/default.css
+++ b/css/default.css
@@ -344,6 +344,10 @@ nav a:hover {
 #message-input {
     resize: none;
 }
+
+.messageStatus {
+    text-align: center;
+}
 .submit-btn {
     display: block;
     margin-top: 1.5rem;
